Replace love letter with birthday message

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Love Letter</title>
+    <title>Happy Birthday Bhaiya</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -26,8 +26,8 @@
           <div class="corner corner-br"></div>
           <div class="wax-seal"></div>
           <div class="ltr-cont">
-            <div class="date">30th September, 2025</div>
-            <div class="slon">My Cherished Love...Hayat,</div>
+            <div class="date">31st December, 2025</div>
+            <div class="slon">Many Many Happy Returns Of The Day Kashan Bhaiya,</div>
 
             <div class="paragp">In the quiet embrace of this winter night, as snowflakes drift outside my window like pieces of fallen starlight, my heart finds no rest until it speaks of you. My Darling, Ma Bewbie, Mah Bewbielicious — every word I write tonight carries the fragrance of the love you’ve given me, and the weight of the mistakes I sometimes make. If ever my words have wounded or my silence has hurt, forgive me. My heart never meant harm; it only ever beats for you.
                                   </div>
@@ -56,6 +56,7 @@
     <script src="ltr.js"></script>
   </body>
 </html>
+
 
 
 
