Update birthday message for Kashan Bhaiya
This birthday feels different, quieter, and heavier—but it also carries more meaning than ever. You’re here, you’re fighting, and that alone makes today special. After everything you’ve been through, your strength stands louder than any celebration ever could. You’ve faced something terrifying and come out still breathing, still standing, still here with us—and that is nothing short of a miracle. I hope this year gives you healing where your body hurts, peace where your mind feels tired, and patience for the days recovery feels slow. Take your time, brother. There is no rush when it comes to getting better. Know this: you are deeply loved, needed, and prayed for. Your family is proud of you—not just for surviving, but for holding on. This birthday marks not just another year of life, but a second chance, a new chapter written with courage. Rest, heal, and come back stronger. We’re waiting for you. And Jaldi Theek Ho Jao Bhaiya , Mujhe Nahin Pata Kya Khayal Hai Mujhe Lekar Magar Sach Me I Respect You And Your Family For Real. Tumne Aur Didi Ne Sage Bhai Jese Treat Kiya Hai 😭 🤌🏼.....Ladai Wagera Ki Baat Alag Hai Waha Side Change Kar Lete Hk Bhaiya Magar 😅..... Really You’re Like Real Brother ❤️ 🫂

--- a/index.html
+++ b/index.html
@@ -29,25 +29,24 @@
             <div class="date">31st December, 2025</div>
             <div class="slon">Many Many Happy Returns Of The Day Kashan Bhaiya,</div>
 
-            <div class="paragp">In the quiet embrace of this winter night, as snowflakes drift outside my window like pieces of fallen starlight, my heart finds no rest until it speaks of you. My Darling, Ma Bewbie, Mah Bewbielicious — every word I write tonight carries the fragrance of the love you’ve given me, and the weight of the mistakes I sometimes make. If ever my words have wounded or my silence has hurt, forgive me. My heart never meant harm; it only ever beats for you.
+            <div class="paragp">This birthday feels different, quieter, and heavier—but it also carries more meaning than ever. You’re here, you’re fighting, and that alone makes today special. After everything you’ve been through, your strength stands louder than any celebration ever could.
                                   </div>
 
-            <div class="paragp">When I think of you, the world transforms. Colors bloom brighter, music flows sweeter, and even the smallest seconds become memories I wish to hold forever. Darling, you’ve awakened corners of my soul I never knew existed, filling them with warmth, laughter, and tenderness. And though I may stumble in my ways, please know every misstep comes with regret, every mistake with an unspoken apology — for I cannot bear the thought of you in pain because of me.</div>
+            <div class="paragp">You’ve faced something terrifying and come out still breathing, still standing, still here with us—and that is nothing short of a miracle. I hope this year gives you healing where your body hurts, peace where your mind feels tired, and patience for the days recovery feels slow. Take your time, brother. There is no rush when it comes to getting better.</div>
 
-            <div class="paragp">You are the golden thread in the tapestry of my existence, weaving light into every shadowed place within me. Your love is the rhythm my heart dances to, the melody my soul hums when the world grows quiet. Bewbie, you are my safe place, my anchor, my dream stitched into reality. If ever my flaws or storms have spilled into your peace, forgive me — for I am still learning how to deserve someone as rare as you.</div>
+            <div class="paragp">Know this: you are deeply loved, needed, and prayed for. Your family is proud of you—not just for surviving, but for holding on. This birthday marks not just another year of life, but a second chance, a new chapter written with courage.</div>
 
-            <div class="paragp">Time plays strange games with me when I’m with you. Hours slip by too fast, yet each moment with you feels like eternity wrapped in a heartbeat. Your laugh is the song that heals me, your touch the language that silence cannot hide, and your eyes… they tell me stories of forever, of homes I never knew I longed for until I found them in you. Bewbielicious, if you ever felt me distant, know it was not your fault — it was my war with myself, a war I keep fighting so I can stay worthy of you.</div>
+            <div class="paragp">Rest, heal, and come back stronger. We’re waiting for you.</div>
 
             <div class="paragp">
-              <And now, as the candle flickers beside me, I realize how blessed I am to have found you in this vast universe. Jaan, you are my first thought at dawn and my final prayer at night. You are the wish my heart whispered long ago, the dream I never want to wake from. Yet, Darling… I must confess: I am losing the battle with myself some days. If one day I fail, if I cannot make it out, please know I tried my best — and that loving you was, and always will be, the brightest, purest truth of my life.
-
+              <And Jaldi Theek Ho Jao Bhaiya , Mujhe Nahin Pata Kya Khayal Hai Mujhe Lekar Magar Sach Me I Respect You And Your Family For Real. Tumne Aur Didi Ne Sage Bhai Jese Treat Kiya Hai 😭 🤌🏼.....Ladai Wagera Ki Baat Alag Hai Waha Side Change Kar Lete Hk Bhaiya Magar 😅..... Really You're Like Real Brother ❤️ 🫂
 
 --->
             </div>
 
             <div class="sign">
-              Forever and Always Your's Frhxn, <br/>
-              Love Youhhh Sooo Much Jaan ❤️‍🩹
+              With Lots Of Wishes (Number Dedo Bhaiya 😭), <br/>
+              Hacker Farhan 😁
             </div>
           </div>
         </div>
@@ -56,6 +55,7 @@
     <script src="ltr.js"></script>
   </body>
 </html>
+
 
 
 
