Revise birthday message in index.html
Updated the birthday message for Kashan Bhaiya with new text and emojis.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="book">
         <div class="book-cover">
           <div class="cvr-dirn">
-            A Love Letter !!
+            Happy Birthday Bhai 🥳!!
             <div class="shine"></div>
           </div>
         </div>
@@ -27,16 +27,16 @@
           <div class="wax-seal"></div>
           <div class="ltr-cont">
             <div class="date">31st December, 2025</div>
-            <div class="slon">Many Many Happy Returns Of The Day Kashan Bhaiya,</div>
+            <div class="slon">Many Many Happy Returns Of The Day Kashan Bhaiya 🫶🏼🫂,</div>
 
-            <div class="paragp">This birthday feels different, quieter, and heavier—but it also carries more meaning than ever. You’re here, you’re fighting, and that alone makes today special. After everything you’ve been through, your strength stands louder than any celebration ever could.
+            <div class="paragp">This birthday feels different, quieter, and heavier—but it also carries more meaning than ever. You’re here, you’re fighting, and that alone makes today special. After everything you’ve been through, your strength stands louder than any celebration ever could.💫
                                   </div>
 
-            <div class="paragp">You’ve faced something terrifying and come out still breathing, still standing, still here with us—and that is nothing short of a miracle. I hope this year gives you healing where your body hurts, peace where your mind feels tired, and patience for the days recovery feels slow. Take your time, brother. There is no rush when it comes to getting better.</div>
+            <div class="paragp">You’ve faced something terrifying and come out still breathing, still standing, still here with us—and that is nothing short of a miracle. I hope this year gives you healing where your body hurts, peace where your mind feels tired, and patience for the days recovery feels slow. Take your time, brother. There is no rush when it comes to getting better.✨</div>
 
-            <div class="paragp">Know this: you are deeply loved, needed, and prayed for. Your family is proud of you—not just for surviving, but for holding on. This birthday marks not just another year of life, but a second chance, a new chapter written with courage.</div>
+            <div class="paragp">Know this: you are deeply loved, needed, and prayed for. Your family is proud of you—not just for surviving, but for holding on. This birthday marks not just another year of life, but a second chance, a new chapter written with courage.❤️‍🔥</div>
 
-            <div class="paragp">Rest, heal, and come back stronger. We’re waiting for you.</div>
+            <div class="paragp">Rest, heal, and come back stronger. We’re waiting for you.❤️‍🩹🫂</div>
 
             <div class="paragp">
               <And Jaldi Theek Ho Jao Bhaiya , Mujhe Nahin Pata Kya Khayal Hai Mujhe Lekar Magar Sach Me I Respect You And Your Family For Real. Tumne Aur Didi Ne Sage Bhai Jese Treat Kiya Hai 😭 🤌🏼.....Ladai Wagera Ki Baat Alag Hai Waha Side Change Kar Lete Hk Bhaiya Magar 😅..... Really You're Like Real Brother ❤️ 🫂
@@ -55,6 +55,7 @@
     <script src="ltr.js"></script>
   </body>
 </html>
+
 
 
 
